# wrs-repros

issue-1246/: Cargo.toml
issue-1246/src/: main.rs
issue-1256/: Cargo.toml  build.rs
issue-2327/: .gitattributes  Cargo.toml  build-lib.sh  build-metadata.cmd  build.rs
issue-2327/.metadata/: generate.proj  sample.cpp  sample.def  sample.h  sample.lib
issue-2327/crates/sample/: Cargo.toml
issue-2327/crates/sample/src/: main.rs
issue-2327/src/: bindings.rs  lib.rs
virtualdesktop/: Cargo.toml
virtualdesktop/src/: main.rs
winmd_struct/: Cargo.toml  generate_winmd.cmd  test.idl
winmd_struct/.windows/winmd/: test.winmd
winmd_struct/src/: main.rs
