[package]
name = "issue-1256"
version = "0.1.0"
edition = "2021"

[build-dependencies]
embed-resource = "1.6"

[dependencies.windows]
version = "0.23.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
