[package]
name = "virtualdesktop"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies.windows]
version = "0.28.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

